--- a/dspy_ollama_llamaindex.ipynb
+++ b/dspy_ollama_llamaindex.ipynb
@@ -1,13 +1,15 @@
 {
  "cells": [
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
     "# !cp '/workspace/repos/agentic-ai/PPM - MCG MADISON RIDGE DST.pdf' /workspace/data\n",
     "# !cp '/workspace/repos/agentic-ai/MASTER - PYTHON - SCORING MODEL - MCG MADISON RIDGE DST - v2.0.xlsx' /workspace/data\n",
     "!apt update\n",
-    "!apt install tmux apt-utils vim -y\n",
+    "!apt install tmux apt-utils dialog vim -y\n",
     "!pip3 install llama-index llama-parse llama-agents llama-index-llms-huggingface llama-index-embeddings-huggingface llama-index-llms-huggingface-api llama-index-llms-ollama llama-index-embeddings-ollama llama-index-vector-stores-neo4jvector llama-index-graph-stores-neo4j\n",
     "!pip3 install openpyxl sentencepiece protobuf evaluate rouge_score absl-py tensorboardX bitsandbytes peft accelerate python-dotenv dspy-ai graspologic\n",
     "!pip3 install flash-attn --no-build-isolation\n",
@@ -24,15 +26,19 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
     "!ollama pull llama3.1:latest"
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
     "# https://www.ecfr.gov/developers/documentation/api/v1#/Versioner%20Service/get_api_versioner_v1_full__date__title__title__xml\n",
     "\n",
@@ -49,13 +55,14 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
+    "# need apt-get install dialog apt-utils -y\n",
     "\n",
-    "!apt update\n",
-    "!DEBIAN_FRONTEND=\"noninteractive\"\n",
-    "!wget -O - https://debian.neo4j.com/neotechnology.gpg.key | gpg --dearmor -o /etc/apt/keyrings/neotechnology.gpg -y\n",
+    "!wget -O - https://debian.neo4j.com/neotechnology.gpg.key | gpg --dearmor -o /etc/apt/keyrings/neotechnology.gpg\n",
     "!echo 'deb [signed-by=/etc/apt/keyrings/neotechnology.gpg] https://debian.neo4j.com stable latest' | tee -a /etc/apt/sources.list.d/neo4j.list\n",
     "\n",
     "!apt list -a neo4j\n",
@@ -196,10 +203,8 @@
     "\n",
     "from llama_index.llms.ollama import Ollama\n",
     "\n",
-    "# model_name = \"mistral:latest\"\n",
-    "model_name, num_ctx = \"llama3.1\", 128000\n",
-    "# model_name = \"qwen2:1.5b\"\n",
-    "# model_name = \"gemma:1.5b\"\n",
+    "# model_name, num_ctx = \"mistral-nemo\", 128000\n",
+    "# model_name, num_ctx = \"llama3.1\", 128000\n",
     "\n",
     "# system_prompt = \"You are an expert at answering questions about rules and regulations regarding Title 17—Commodity and Securities Exchanges: CHAPTER II—SECURITIES AND EXCHANGE COMMISSION. Please provide a summary of the following text, and cite any rule or regulation codes (e.g. § 230.503, Rule 501(a)) from context that support the answer:\"\n",
     "# llm = Ollama(model=model_name, url=\"http://127.0.0.1:11434\", system_prompt=system_prompt, context_window=num_ctx, model_type=\"chat\", is_function_calling_model=False)\n",
@@ -232,7 +237,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def get_metadata(s, metadata={\"title\":None, \"chapter\":None, \"part\":None, \"subpart\":None, \"section\":None, \"description\":None}):\n",
+    "def get_metadata(s, text, metadata={\"title\":None, \"chapter\":None, \"part\":None, \"subpart\":None, \"section\":None, \"description\":None, \"mentioned_sections\":None}):\n",
     "    s_split = s[2:-2].split(\"', '\")\n",
     "    key_lengths = {key: len(key) for key in metadata}\n",
     "    for x in s_split:\n",
@@ -245,6 +250,7 @@
     "                    break\n",
     "    metadata[\"description\"] = s_split[-1]\n",
     "    metadata[\"section\"] = s_split[-1].split(\"  \")[0]#.split(\" \")[-1].strip()\n",
+    "    metadata[\"mentioned_sections\"] = get_linked_sections(text)\n",
     "    return metadata\n",
     "\n",
     "def get_rule_and_description(document):\n",
@@ -255,9 +261,26 @@
     "\n",
     "import re\n",
     "def get_linked_sections(doc):\n",
-    "    pattern = r'§\\s?\\d+\\.\\d+[a-zA-Z-]*\\d*'\n",
-    "    linked_sections = re.findall(pattern, doc.text)\n",
-    "    return linked_sections\n"
+    "    cleaned_sections = []\n",
+    "    pattern = pattern = r'§§?\\s\\d{3}\\.\\d+(?:\\s(?:and|through)\\s\\d{3}\\.\\d+)?'\n",
+    "    linked_sections = re.findall(pattern, doc)\n",
+    "    for section in linked_sections:\n",
+    "        # Check if the section contains 'and' or 'through'\n",
+    "        if 'and' in section or 'through' in section:\n",
+    "            # Remove the '§§' prefix if present\n",
+    "            section = section.replace('§§', '§')\n",
+    "            # Split the section into individual parts\n",
+    "            parts = re.split(r'\\s(?:and|through)\\s', section)\n",
+    "            # Add each part to the cleaned_sections list, ensuring each part has the '§' prefix\n",
+    "            for part in parts:\n",
+    "                if part[0] != '§':\n",
+    "                    cleaned_sections.append(part.strip())\n",
+    "                else:\n",
+    "                    cleaned_sections.append(part.strip())\n",
+    "        else:\n",
+    "            # If the section is already a single section, add it to the list\n",
+    "            cleaned_sections.append(section.strip())\n",
+    "    return list(set(cleaned_sections))"
    ]
   },
   {
@@ -318,27 +341,27 @@
     "from typing import Literal\n",
     "from llama_index.core.indices.property_graph import SchemaLLMPathExtractor\n",
     "\n",
-    "# entities = Literal[\"SECTION\", \"RULE\", \"ACT\"]\n",
-    "entities = Literal[\"SECTION\"]\n",
+    "entities = Literal[\"SECTION\", \"RULE\", \"ACT\"]\n",
+    "# entities = Literal[\"SECTION\"]\n",
     "relations = Literal[\n",
     "    \"RELATED_TO\",\n",
-    "    # \"MENTIONED_BY\",\n",
-    "    # \"MENTIONS\",\n",
-    "    \"REFERENCED_BY\",\n",
-    "    \"REFERS_TO\",\n",
+    "    \"MENTIONED_BY\",\n",
+    "    \"MENTIONS\",\n",
+    "    # \"REFERENCED_BY\",\n",
+    "    # \"REFERS_TO\",\n",
     "]\n",
     "all_relations = [\n",
     "    \"RELATED_TO\",\n",
-    "    # \"MENTIONED_BY\",\n",
-    "    # \"MENTIONS\",\n",
-    "    \"REFERENCED_BY\",\n",
-    "    \"REFERS_TO\",\n",
+    "    \"MENTIONED_BY\",\n",
+    "    \"MENTIONS\",\n",
+    "    # \"REFERENCED_BY\",\n",
+    "    # \"REFERS_TO\",\n",
     "]\n",
     "\n",
     "validation_schema = {\n",
     "    \"Section\": all_relations,\n",
-    "    # \"Rule\": all_relations,\n",
-    "    # \"Act\": [\"MENTIONED_BY\"]\n",
+    "    \"Rule\": all_relations,\n",
+    "    \"Act\": [\"MENTIONED_BY\"]\n",
     "}\n"
    ]
   },
@@ -360,36 +383,38 @@
     "else:\n",
     "    print(f'    building from scratch...')\n",
     "    documents = [Document(text=t, \n",
-    "                          text_template = '{metadata_str}\\n\\n{content}',\n",
-    "                        #   text_template = '{metadata_str}\\n\\nCONTEXT:\\n{content}',\n",
-    "                          metadata=get_metadata(m, metadata={\"section\":None, \"description\":None})) \\\n",
+    "                        #   text_template='{metadata_str}\\n\\n{content}',\n",
+    "                          text_template='{metadata_str}',\n",
+    "                        #   text_template = 'METADATA:\\n{metadata_str}\\n\\nCONTEXT:\\n{content}',\n",
+    "                          metadata=get_metadata(m, t, metadata={\"section\":None, \"description\":None, \"mentioned_sections\":None})) \\\n",
     "                            for m,t in data.items()]\n",
     "                        # excluded_llm_metadata_keys=[\"title\", \"chapter\"],) for m,t in data.items()]\n",
     "    \n",
-    "    # import random\n",
-    "    # linked = ['§ 240.13a-15',\n",
-    "    # '§ 229.1101',\n",
-    "    # '§ 239.24',\n",
-    "    # '§ 274.5',\n",
-    "    # '§ 270.30',\n",
-    "    # '§ 240.13h-1',\n",
-    "    # '§ 242.600']\n",
-    "    # doc_linked = []\n",
-    "    # for doc in documents:\n",
-    "    #     rule, rule_description = get_rule_and_description(doc)\n",
-    "    #     for linked_rule in linked:\n",
-    "    #         if rule in linked_rule:\n",
-    "    #             doc_linked.append(doc)\n",
-    "    # doc_linked+=random.sample(documents, 3)\n",
+    "    import random\n",
+    "    linked = ['§ 240.13a-15',\n",
+    "    '§ 229.1101',\n",
+    "    '§ 239.24',\n",
+    "    '§ 274.5',\n",
+    "    '§ 270.30',\n",
+    "    '§ 240.13h-1',\n",
+    "    '§ 242.600']\n",
+    "    doc_linked = []\n",
+    "    for doc in documents:\n",
+    "        rule, rule_description = get_rule_and_description(doc)\n",
+    "        for linked_rule in linked:\n",
+    "            if rule in linked_rule:\n",
+    "                doc_linked.append(doc)\n",
+    "    doc_linked+=random.sample(documents, 3)\n",
     "\n",
     "    NUMBER_OF_ARTICLES = 1090\n",
     "    pos_ent, pos_rel = [], []\n",
-    "    for doc in documents:\n",
-    "        section = get_linked_sections(doc)\n",
+    "    for doc in doc_linked:\n",
+    "        section = get_linked_sections(doc.text)\n",
     "        pos_ent+=section\n",
     "\n",
     "    # extract_prompt = f\"What sections (e.g. {pos_ent[:6]}) are mentioned in the content? Return only sections in the content and the relation to the section in the metadata.\"\n",
-    "    extract_prompt = f\"What sections (e.g. {pos_ent[:6]}) are mentioned in the content? Return only sections in the content.\"\n",
+    "    # extract_prompt = f\"What sections (e.g. {pos_ent[:6]}) are mentioned in the content? Return only sections in the content.\"\n",
+    "    extract_prompt = f\"Extract the list of sections mentioned in the content (e.g. [§ 230.503,§ 240.13a-15]). Return only sections in the content.\"\n",
     "    \n",
     "    kg_extractor = SchemaLLMPathExtractor(\n",
     "        llm=llm,\n",
@@ -405,13 +430,16 @@
     "        )\n",
     "\n",
     "    # from llama_index.core.indices.property_graph import DynamicLLMPathExtractor\n",
-    "\n",
     "    # kg_extractor = DynamicLLMPathExtractor(\n",
     "    #     llm=llm,\n",
-    "    #     max_triplets_per_chunk=20,\n",
-    "    #     num_workers=4,\n",
-    "    #     allowed_entity_types=[\"RULES\", \"REGULATIONS\"],\n",
-    "    #     allowed_relation_types=all_relations,\n",
+    "    #     max_triplets_per_chunk=10,\n",
+    "    #     extract_prompt=extract_prompt,\n",
+    "    #     num_workers=6,\n",
+    "    #     allowed_entity_types=[\"SECTION\"],#, \"RULE\", \"ACT\"],\n",
+    "    #     allowed_entity_props=[(\"section\", \"number preceeded by §, or two numbers proceeded by §§, that can include a decimal point, a dash, or a letter\")],# \"rule\", \"act\"],\n",
+    "    #     allowed_relation_types=['REFERS_TO'],\n",
+    "    #     allowed_relation_props=['refers to entities'],\n",
+    "    #     # parse_fn=get_linked_sections\n",
     "    # )\n",
     "\n",
     "    # from llama_index.core.indices.property_graph import SimpleLLMPathExtractor\n",
@@ -435,12 +463,21 @@
     "        **config\n",
     "    )\n",
     "\n",
-    "    from llama_index.core import PropertyGraphIndex\n",
-    "    vector_index = PropertyGraphIndex.from_documents(documents, #doc_linked, #documents[NUMBER_OF_ARTICLES:NUMBER_OF_ARTICLES+40], \n",
+    "    graph_store.structured_query(\n",
+    "        \"\"\"\n",
+    "    MATCH (n) DETACH DELETE n\n",
+    "    \"\"\"\n",
+    "    )\n",
+    "\n",
+    "\n",
+    "    from llama_index.core import PropertyGraphIndex, KnowledgeGraphIndex\n",
+    "    from llama_index.core.node_parser import SentenceSplitter\n",
+    "    vector_index = PropertyGraphIndex.from_documents(doc_linked, #doc_linked, #documents[NUMBER_OF_ARTICLES:NUMBER_OF_ARTICLES+40], \n",
     "                                                     llm=llm,\n",
     "                                                     property_graph_store=graph_store, \n",
     "                                                     embed_model=embed_model, \n",
     "                                                     kg_extractors=[kg_extractor],\n",
+    "                                                     transformations=[SentenceSplitter(chunk_size=500, chunk_overlap=50)],\n",
     "                                                     show_progress=True)\n",
     "    \n",
     "    # vector_index = VectorStoreIndex.from_documents(documents, embed_model=embed_model, show_progress=True)\n",
@@ -464,16 +501,6 @@
    "outputs": [],
    "source": [
     "response = query_engine.query(\"What sections are mentioned in section § 240.13a-15?\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# ['229.1101', '239.24', '274.5', '240.3b-4', '270.30a-2']\n",
-    "print(response.response)"
    ]
   },
   {
@@ -511,50 +538,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "vector_index."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import re\n",
-    "def get_linked_sections(doc):\n",
-    "    pattern = r'\\d+\\.\\d+[a-zA-Z-]*\\d*'\n",
-    "    # pattern = r'§\\s?\\d+\\.\\d+[a-zA-Z-]*\\d*'\n",
-    "    linked_sections = re.findall(pattern, doc.text)\n",
-    "    return linked_sections\n",
-    "\n",
-    "for doc in doc_linked:\n",
-    "    print(get_linked_sections(doc))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "print(doc_linked[5].metadata['section'])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "print(doc_linked[5].text)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "# MATCH (n) WHERE n.description = \"§ 240.13a-15   Controls and procedures.\" RETURN n\n",
     "\n",
     "# MATCH (n) DETACH DELETE n"
@@ -565,38 +548,98 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
-    "text=\"\"\"registered on Form N-5 (§§ 239.24 and 274.5 of this chapter), or a unit investment trust as defined in section 4(2) 240.3b-4 of the Information \"\"\"\n",
-    "re.findall(pattern, doc_linked[3].text)\n"
+    "print('loading data to vector store...')\n",
+    "persist_dir = \"/workspace/data/storage/sec_baseline\"\n",
+    "\n",
+    "if os.path.exists(persist_dir):\n",
+    "    print(f'    loading from {persist_dir}...')\n",
+    "    # rebuild storage context\n",
+    "    storage_context = StorageContext.from_defaults(persist_dir=persist_dir)\n",
+    "    # load index\n",
+    "    vector_index = load_index_from_storage(storage_context, embed_model=embed_model)\n",
+    "else:\n",
+    "    print(f'    building from scratch...')\n",
+    "    documents = [Document(text=t, \n",
+    "                          text_template = '{metadata_str}\\n\\n{content}',\n",
+    "                        #   text_template = 'METADATA:\\n{metadata_str}\\n\\nCONTEXT:\\n{content}',\n",
+    "                          metadata=get_metadata(m, metadata={\"section\":None, \"description\":None})) \\\n",
+    "                            for m,t in data.items()]\n",
+    "                        # excluded_llm_metadata_keys=[\"title\", \"chapter\"],) for m,t in data.items()]\n",
+    "    \n",
+    "    import random\n",
+    "    linked = ['§ 240.13a-15',\n",
+    "    '§ 229.1101',\n",
+    "    '§ 239.24',\n",
+    "    '§ 274.5',\n",
+    "    '§ 270.30',\n",
+    "    '§ 240.13h-1',\n",
+    "    '§ 242.600']\n",
+    "    doc_linked = []\n",
+    "    for doc in documents:\n",
+    "        rule, rule_description = get_rule_and_description(doc)\n",
+    "        for linked_rule in linked:\n",
+    "            if rule in linked_rule:\n",
+    "                doc_linked.append(doc)\n",
+    "    doc_linked+=random.sample(documents, 3)\n",
+    "\n",
+    "    NUMBER_OF_ARTICLES = 1090\n",
+    "    pos_ent, pos_rel = [], []\n",
+    "    for doc in doc_linked:\n",
+    "        section = get_linked_sections(doc)\n",
+    "        pos_ent+=section\n",
+    "\n",
+    "    # extract_prompt = f\"What sections (e.g. {pos_ent[:6]}) are mentioned in the content? Return only sections in the content and the relation to the section in the metadata.\"\n",
+    "    extract_prompt = f\"What sections (e.g. {pos_ent[:6]}) are mentioned in the content? Return only sections in the content.\"\n",
+    "\n",
+    "    neo_url = \"bolt://localhost:7687\"\n",
+    "    config={\"connection_timeout\": 240, \"connection_acquisition_timeout\": 240, \"max_connection_pool_size\": 1000}\n",
+    "    from llama_index.graph_stores.neo4j import Neo4jGraphStore\n",
+    "    graph_store = Neo4jGraphStore(\n",
+    "        username=\"neo4j\",\n",
+    "        password=os.getenv(\"NEO4J_PWD\"),\n",
+    "        url=neo_url,\n",
+    "        database=\"neo4j\",\n",
+    "        **config\n",
+    "    )\n",
+    "\n",
+    "    graph_store.query(\n",
+    "        \"\"\"\n",
+    "    MATCH (n) DETACH DELETE n\n",
+    "    \"\"\"\n",
+    "    )\n",
+    "\n",
+    "    storage_context = StorageContext.from_defaults(graph_store=graph_store)\n",
+    "    from llama_index.core import PropertyGraphIndex, KnowledgeGraphIndex\n",
+    "    vector_index = KnowledgeGraphIndex.from_documents(doc_linked, #doc_linked, #documents[NUMBER_OF_ARTICLES:NUMBER_OF_ARTICLES+40], \n",
+    "                                                     storage_context=storage_context, \n",
+    "                                                     embed_model=embed_model, \n",
+    "                                                     kg_triplet_extract_fn=get_linked_sections,\n",
+    "                                                     show_progress=True)\n",
+    "    \n",
+    "query_engine = vector_index.as_query_engine(similarity_top_k=3)\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
