--- a/graphrag_ollama_llamaindex.ipynb
+++ b/graphrag_ollama_llamaindex.ipynb
@@ -55,13 +55,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
     "# need apt-get install dialog apt-utils -y\n",
-    "\n",
+    "!apt update\n",
     "!wget -O - https://debian.neo4j.com/neotechnology.gpg.key | gpg --dearmor -o /etc/apt/keyrings/neotechnology.gpg\n",
     "!echo 'deb [signed-by=/etc/apt/keyrings/neotechnology.gpg] https://debian.neo4j.com stable latest' | tee -a /etc/apt/sources.list.d/neo4j.list\n",
     "\n",
@@ -204,7 +202,7 @@
     "from llama_index.llms.ollama import Ollama\n",
     "\n",
     "# model_name, num_ctx = \"mistral-nemo\", 128000\n",
-    "# model_name, num_ctx = \"llama3.1\", 128000\n",
+    "model_name, num_ctx = \"llama3.1\", 128000\n",
     "\n",
     "# system_prompt = \"You are an expert at answering questions about rules and regulations regarding Title 17—Commodity and Securities Exchanges: CHAPTER II—SECURITIES AND EXCHANGE COMMISSION. Please provide a summary of the following text, and cite any rule or regulation codes (e.g. § 230.503, Rule 501(a)) from context that support the answer:\"\n",
     "# llm = Ollama(model=model_name, url=\"http://127.0.0.1:11434\", system_prompt=system_prompt, context_window=num_ctx, model_type=\"chat\", is_function_calling_model=False)\n",
@@ -341,7 +339,7 @@
     "from typing import Literal\n",
     "from llama_index.core.indices.property_graph import SchemaLLMPathExtractor\n",
     "\n",
-    "entities = Literal[\"SECTION\", \"RULE\", \"ACT\"]\n",
+    "entities = Literal[\"SECTION\", \"RULE\", \"ACT\", \"LAW\"]\n",
     "# entities = Literal[\"SECTION\"]\n",
     "relations = Literal[\n",
     "    \"RELATED_TO\",\n",
@@ -361,7 +359,8 @@
     "validation_schema = {\n",
     "    \"Section\": all_relations,\n",
     "    \"Rule\": all_relations,\n",
-    "    \"Act\": [\"MENTIONED_BY\"]\n",
+    "    \"Act\": [\"MENTIONS\"],\n",
+    "    \"Law\": [\"MENTIONS\"],\n",
     "}\n"
    ]
   },
@@ -372,7 +371,7 @@
    "outputs": [],
    "source": [
     "print('loading data to vector store...')\n",
-    "persist_dir = \"/workspace/data/storage/sec_baseline\"\n",
+    "persist_dir = \"/workspace/data/storage/sec_alldocs_prompt\"\n",
     "\n",
     "if os.path.exists(persist_dir):\n",
     "    print(f'    loading from {persist_dir}...')\n",
@@ -390,31 +389,32 @@
     "                            for m,t in data.items()]\n",
     "                        # excluded_llm_metadata_keys=[\"title\", \"chapter\"],) for m,t in data.items()]\n",
     "    \n",
-    "    import random\n",
-    "    linked = ['§ 240.13a-15',\n",
-    "    '§ 229.1101',\n",
-    "    '§ 239.24',\n",
-    "    '§ 274.5',\n",
-    "    '§ 270.30',\n",
-    "    '§ 240.13h-1',\n",
-    "    '§ 242.600']\n",
-    "    doc_linked = []\n",
-    "    for doc in documents:\n",
-    "        rule, rule_description = get_rule_and_description(doc)\n",
-    "        for linked_rule in linked:\n",
-    "            if rule in linked_rule:\n",
-    "                doc_linked.append(doc)\n",
-    "    doc_linked+=random.sample(documents, 3)\n",
+    "    # import random\n",
+    "    # linked = ['§ 240.13a-15',\n",
+    "    # '§ 229.1101',\n",
+    "    # '§ 239.24',\n",
+    "    # '§ 274.5',\n",
+    "    # '§ 270.30',\n",
+    "    # '§ 240.13h-1',\n",
+    "    # '§ 242.600']\n",
+    "    # doc_linked = []\n",
+    "    # for doc in documents:\n",
+    "    #     rule, rule_description = get_rule_and_description(doc)\n",
+    "    #     for linked_rule in linked:\n",
+    "    #         if rule in linked_rule:\n",
+    "    #             doc_linked.append(doc)\n",
+    "    # doc_linked+=random.sample(documents, 3)\n",
     "\n",
-    "    NUMBER_OF_ARTICLES = 1090\n",
-    "    pos_ent, pos_rel = [], []\n",
-    "    for doc in doc_linked:\n",
-    "        section = get_linked_sections(doc.text)\n",
-    "        pos_ent+=section\n",
+    "    # NUMBER_OF_ARTICLES = 1090\n",
+    "    # pos_ent, pos_rel = [], []\n",
+    "    # for doc in doc_linked:\n",
+    "    #     section = get_linked_sections(doc.text)\n",
+    "    #     pos_ent+=section\n",
     "\n",
     "    # extract_prompt = f\"What sections (e.g. {pos_ent[:6]}) are mentioned in the content? Return only sections in the content and the relation to the section in the metadata.\"\n",
     "    # extract_prompt = f\"What sections (e.g. {pos_ent[:6]}) are mentioned in the content? Return only sections in the content.\"\n",
-    "    extract_prompt = f\"Extract the list of sections mentioned in the content (e.g. [§ 230.503,§ 240.13a-15]). Return only sections in the content.\"\n",
+    "    # extract_prompt = f\"Extract sections, rules, acts and laws mentioned in the content (e.g. § 230.503,§ 240.13a-15, ). Return only sections in the content.\"\n",
+    "    extract_prompt = \"What sections, rules, acts and laws (e.g. § 230.503, § 240.13a-15, Act (15 U.S.C. 781), Investment Company Act of 1940) are mentioned in the content?\"\n",
     "    \n",
     "    kg_extractor = SchemaLLMPathExtractor(\n",
     "        llm=llm,\n",
@@ -472,16 +472,16 @@
     "\n",
     "    from llama_index.core import PropertyGraphIndex, KnowledgeGraphIndex\n",
     "    from llama_index.core.node_parser import SentenceSplitter\n",
-    "    vector_index = PropertyGraphIndex.from_documents(doc_linked, #doc_linked, #documents[NUMBER_OF_ARTICLES:NUMBER_OF_ARTICLES+40], \n",
+    "    vector_index = PropertyGraphIndex.from_documents(documents, #doc_linked\n",
     "                                                     llm=llm,\n",
     "                                                     property_graph_store=graph_store, \n",
     "                                                     embed_model=embed_model, \n",
     "                                                     kg_extractors=[kg_extractor],\n",
-    "                                                     transformations=[SentenceSplitter(chunk_size=500, chunk_overlap=50)],\n",
+    "                                                    #  transformations=[SentenceSplitter(chunk_size=500, chunk_overlap=50)],\n",
     "                                                     show_progress=True)\n",
     "    \n",
     "    # vector_index = VectorStoreIndex.from_documents(documents, embed_model=embed_model, show_progress=True)\n",
-    "    # vector_index.storage_context.persist(persist_dir=persist_dir)\n",
+    "    vector_index.storage_context.persist(persist_dir=persist_dir)\n",
     "\n",
     "# query_engine = vector_index.as_retriever(similarity_top_k=3)\n",
     "query_engine = vector_index.as_query_engine(similarity_top_k=3)\n"
@@ -511,7 +511,7 @@
    "source": [
     "# oprompt = \"A section an alphanumeric string with punctuation proceeded by '§' (e.g. § 230.503, § 240.13a-15). Return only sections in the context.\"\n",
     "# oprompt = \"A section is number proceeded by '§' with a decimal point (e.g. § 230.503, § 240.13a-15). Return only sections in the context.\"\n",
-    "oprompt = \"What sections (e.g. § 230.503, § 240.13a-15) are mentioned in the context? Return only sections in the context.\""
+    "oprompt = \"What sections (e.g. § 230.503, § 240.13a-15, Act (15 U.S.C. 781), Investment Company Act of 1940) are mentioned in the context?\""
    ]
   },
   {
