working QA dataset generator, embedding fine tuning

--- a/llamaindex_graphrag.ipynb
+++ b/llamaindex_graphrag.ipynb
@@ -61,6 +61,7 @@
    "outputs": [],
    "source": [
     "# need apt-get install dialog apt-utils -y\n",
+    "# !apt remove openjdk-21-jre-headless -y\n",
     "!apt upgrade -y\n",
     "!wget -O - https://debian.neo4j.com/neotechnology.gpg.key | gpg --dearmor -o /etc/apt/keyrings/neotechnology.gpg\n",
     "!echo 'deb [signed-by=/etc/apt/keyrings/neotechnology.gpg] https://debian.neo4j.com stable latest' | tee -a /etc/apt/sources.list.d/neo4j.list\n",
@@ -69,7 +70,6 @@
     "!apt install neo4j=1:5.22.0 -y\n",
     "!echo \"neo4j-enterprise neo4j/question select I ACCEPT\" | debconf-set-selections\n",
     "!echo \"neo4j-enterprise neo4j/license note\" | debconf-set-selections\n",
-    "!apt remove openjdk-21-jre-headless -y\n",
     "!apt install openjdk-17-jre -y\n",
     "!cd /var/lib/neo4j/plugins/ && wget https://github.com/neo4j/apoc/releases/download/5.22.0/apoc-5.22.0-core.jar\n"
    ]
@@ -109,18 +109,14 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
     "from llama_index.llms.ollama import Ollama\n",
     "from llama_index.embeddings.ollama import OllamaEmbedding\n",
     "import dspy\n",
     "import numpy as np\n",
-    "import pandas as pd\n",
-    "\n",
-    "from train_utils import get_csv_string, randomize_row_values, operators_dict, range_description_json, split_df_by_empty_columns, split_df_by_empty_rows, print_trainable_parameters\n"
+    "import pandas as pd"
    ]
   },
   {
