--- a/llamaindex_graphrag.ipynb
+++ b/llamaindex_graphrag.ipynb
@@ -9,7 +9,7 @@
     "# !cp '/workspace/repos/agentic-ai/PPM - MCG MADISON RIDGE DST.pdf' /workspace/data\n",
     "# !cp '/workspace/repos/agentic-ai/MASTER - PYTHON - SCORING MODEL - MCG MADISON RIDGE DST - v2.0.xlsx' /workspace/data\n",
     "!apt update\n",
-    "!apt install tmux apt-utils dialog vim -y\n",
+    "!apt install tmux vim -y\n",
     "!pip3 install llama-index llama-parse llama-agents llama-index-llms-huggingface llama-index-embeddings-huggingface llama-index-llms-huggingface-api llama-index-llms-ollama llama-index-embeddings-ollama llama-index-vector-stores-neo4jvector llama-index-graph-stores-neo4j\n",
     "!pip3 install openpyxl sentencepiece protobuf evaluate rouge_score absl-py tensorboardX bitsandbytes peft accelerate python-dotenv dspy-ai graspologic\n",
     "!pip3 install flash-attn --no-build-isolation\n",
@@ -60,9 +60,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# need apt-get install dialog apt-utils -y\n",
     "# !apt remove openjdk-21-jre-headless -y\n",
-    "!apt upgrade -y\n",
+    "# !apt upgrade -y\n",
+    "!apt install dialog apt-utils -y (done above)\n",
     "!wget -O - https://debian.neo4j.com/neotechnology.gpg.key | gpg --dearmor -o /etc/apt/keyrings/neotechnology.gpg\n",
     "!echo 'deb [signed-by=/etc/apt/keyrings/neotechnology.gpg] https://debian.neo4j.com stable latest' | tee -a /etc/apt/sources.list.d/neo4j.list\n",
     "!apt list -a neo4j\n",
